@@ -1,3 +1,11 @@
+2012-03-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-edit-pgp-filtered-validities): New variable.
+	(mime-edit-pgp-keys-valid-key): New function.
+	(mime-edit-pgp-get-signers, mime-edit-encrypt-pgp-mime): Use them.
+	Do not return invalid keys.
+	Cf. https://github.com/ikazuhiro/semi-epg/pull/1
+
 2011-07-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-edit.el (mime-edit-make-encrypt-recipient-header): When
